// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail /> by default should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isLazyLoaded": true,
            "isSquare": false,
            "sizes": undefined,
            "srcSet": undefined,
          }
        }
        lazyComponent={[Function]}
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageNotFoundLabelText="Image not found!"
          imageTitle="Image Title"
          imageUrl="www.⚡️.net"
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image"
          >
            <Image
              alt="Image Widget"
              as="img"
              avatar={false}
              fluid={true}
              onLoad={[Function]}
              sizes={null}
              src="www.⚡️.net"
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Widget"
                className="ui fluid image"
                onLoad={[Function]}
                sizes={null}
                src="www.⚡️.net"
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isCircular\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={true}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-circular"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "sizes": undefined,
            "srcSet": undefined,
          }
        }
        lazyComponent={[Function]}
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageNotFoundLabelText="Image not found!"
          imageTitle="Image Title"
          imageUrl="www.⚡️.net"
          imageWidth={null}
          isAvatar={false}
          isCircular={true}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-circular"
          >
            <Image
              alt="Image Widget"
              as="img"
              avatar={false}
              fluid={true}
              onLoad={[Function]}
              sizes={null}
              src="www.⚡️.net"
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Widget"
                className="ui fluid image"
                onLoad={[Function]}
                sizes={null}
                src="www.⚡️.net"
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isSquare\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={true}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-square"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isLazyLoaded={true}
      isSquare={true}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isLazyLoaded": true,
            "isSquare": true,
            "sizes": undefined,
            "srcSet": undefined,
          }
        }
        lazyComponent={[Function]}
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageNotFoundLabelText="Image not found!"
          imageTitle="Image Title"
          imageUrl="www.⚡️.net"
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={true}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image"
          >
            <Image
              alt="Image Widget"
              as="img"
              avatar={false}
              fluid={true}
              onLoad={[Function]}
              sizes={null}
              src="www.⚡️.net"
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Widget"
                className="ui fluid image"
                onLoad={[Function]}
                sizes={null}
                src="www.⚡️.net"
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.size\` is supplied should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size="small"
>
  <div
    className="ui thumbnail small 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isLazyLoaded": true,
            "isSquare": false,
            "sizes": undefined,
            "srcSet": undefined,
          }
        }
        lazyComponent={[Function]}
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageNotFoundLabelText="Image not found!"
          imageTitle="Image Title"
          imageUrl="www.⚡️.net"
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image"
          >
            <Image
              alt="Image Widget"
              as="img"
              avatar={false}
              fluid={true}
              onLoad={[Function]}
              sizes={null}
              src="www.⚡️.net"
              srcSet={null}
              title="Image Title"
              ui={true}
            >
              <img
                alt="Image Widget"
                className="ui fluid image"
                onLoad={[Function]}
                sizes={null}
                src="www.⚡️.net"
                srcSet={null}
                title="Image Title"
              />
            </Image>
          </figure>
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;
